# altego

./: .gitignore  CMakeLists.txt  README.md
resources/: ConnectAltEGO.cs
src/: algorithm.cpp  algorithm.h  capture.cpp  capture.h  detection.cpp  detection.h  main.cpp  result.cpp  result.h  server.cpp  server.h  store.h  window.cpp  window.h
